[refactor] 스터디 주차별 출석 정보 응답을 수정한다 (#214)
- refactor: 스터디 주차별 출석 응답 스펙 수정